force-app/main/default/objects/Account_Plan_Additional_Team_Member__c/Account_Plan_Additional_Team_Member__c.object-meta.xml
<CustomObject>
    <description>Connector object that ties an Account Plan to a User.</description>
    <label>Additional Team Member</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Additional Team Member</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>