force-app/main/default/objects/Account_Plan_Additional_Team_Member__c/fields/Responsibilities__c.field-meta.xml
<CustomField>
    <fullName>Responsibilities__c</fullName>
    <label>Responsibilities</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>